test/parser/block-comment-unterminated.cx
// RUN: %not %cx -parse %s

// CHECK: [[@LINE+1]]:1: error: unterminated block comment
/*
